# Temp

./: CMakeLists.txt
script/qml/: ContentComponent.qml  ErrorComponent.qml  HeaderComponent.qml  main.qml
src/: main.cpp
src/log/: logger.h
src/logconsole/: logger.cpp  logger.h
src/logview/: keydock.cpp  keydock.h  logview.h  mainwidget.cpp  mainwidget.h
src/myitem/: curtain.cpp  curtain.h
src/watchreload/: watchreload.cpp  watchreload.h
